@@ -4,11 +4,11 @@ Description: Generalized Deming regression, Theil-Sen regression and Passing-Bab
 Imports: boot
 Priority: optional
 Package: deming
-Version: 1.2
+Version: 1.3
 LazyData: Yes
 Author: Terry Therneau
 License: LGPL (>= 2)
 NeedsCompilation: no
-Packaged: 2018-06-19 14:22:15 UTC; therneau
+Packaged: 2018-10-08 12:31:29 UTC; therneau
 Repository: CRAN
-Date/Publication: 2018-06-19 14:53:15 UTC
+Date/Publication: 2018-10-08 12:50:03 UTC
