@@ -1,6 +1,6 @@
-a87ae9db932b30ff1c9c243d91d241aa *DESCRIPTION
+1bd7e25524edc119840387fefe53309a *DESCRIPTION
 dae184b2d144eedc92c0f9d19e2dda62 *NAMESPACE
-d02f26b22aa91bdda66385cfd7e6de7d *R/deming.R
+9219de56d73610cc665db0ce2ae79b8a *R/deming.R
 9e0d2117fd2fc5ff1740e1d9056823f5 *R/pbreg.R
 b080ac339a930d0d292a86c4b444905d *R/pbreg.fit.R
 5455ca1d3c1eb70327df5dbd0be6845b *R/thielsen.R
@@ -9,10 +9,10 @@ a4ce8dc38b6d5075f23d26a12947122e *R/thielsen.fit.R
 125a8993c88b795784a86dd5390b2a19 *cleanup
 217a25c69edb050e7078a089f3930347 *data/arsenate.rda
 01ec6b40fb66c89ac4cd12269ed1c8e0 *data/ferritin.rda
-43079df3d0e80199a70188795607c52e *inst/NEWS.Rd
+231d986b5c360dba51ebd00750bf315e *inst/NEWS.Rd
 fea30649c5bf8136e6672b6d5e86cc78 *inst/doc/deming.R
 198183f0a4ea1bb45b83f9a2923e6340 *inst/doc/deming.Rnw
-8a530f8156ec0ae678048d2ea03da20f *inst/doc/deming.pdf
+b38783487c78becf934fb66022628599 *inst/doc/deming.pdf
 34b9778e4fc533ab958f1a5915523a6e *man/arsenate.Rd
 2f5da5ab9bbdaf60201f9572196003c0 *man/deming.Rd
 36a9ff50435f5a441e0f370ba1c06b2d *man/ferritin.Rd
@@ -21,13 +21,13 @@ c52c66a02d93fd9cf3aa0379613518de *man/pbreg.Rd
 b837d6ffc3b64311dd2bcb40459af587 *noweb/Makefile
 aec0b885579f6c4ac4373ebd8b0edc1e *noweb/Readme
 e1a56cec94e1105e8f73d5412beac989 *noweb/deming.pdf
-3063903ee9393dbf8a611d7120d93729 *noweb/demingsource.Rnw
+e66a88b833eb8dd180ed2e6347740c46 *noweb/demingsource.Rnw
 a3cd76c1a5e6f022b79a006631d47f3c *tests/atest.R
 31a7eb83eb090cd7991868c465301206 *tests/atest.Rout.save
 8d7da32b621bfe56d0536b1aca7c32fa *tests/double.R
 38b25062b5b661f0dc6d067e8f69fef2 *tests/double.Rout.save
-938ff06895e37a2fa1918f2f1d7b0859 *tests/dtest.R
-96a9da4cd811d1cfdddaa5ef0356f06f *tests/dtest.Rout.save
+069aa1082f59a4e94bdaeccba2c7dd5e *tests/dtest.R
+13180cba51769b693911f80fa5b5c383 *tests/dtest.Rout.save
 0d3ccc06c919a5a43f1bc4b39ae27ab8 *tests/dtest2.r
 c0f20c51c8e152780349d881fe4e1f01 *tests/pbtest.R
 0fd8295b84c76e5aec10c2cabf4e6575 *tests/pbtest.Rout.save
