@@ -1,7 +1,7 @@
 
-R Under development (unstable) (2014-08-14 r66373) -- "Unsuffered Consequences"
-Copyright (C) 2014 The R Foundation for Statistical Computing
-Platform: i686-pc-linux-gnu (32-bit)
+R Under development (unstable) (2018-09-18 r75322) -- "Unsuffered Consequences"
+Copyright (C) 2018 The R Foundation for Statistical Computing
+Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -37,7 +37,6 @@ Type 'q()' to quit R.
 > 
 > require(deming)
 Loading required package: deming
-Loading required package: boot
 > aeq <- function(x, y, ...) all.equal(as.vector(x), as.vector(y), ...)
 > 
 > x <- 1:10
@@ -66,6 +65,18 @@ Loading required package: boot
 [1] TRUE
 > 
 > 
+> # Regression through the origin
+> 
+> dfit3 <- deming(y ~ x-1)
+> ofun <- function(slope) {
++     theta <- atan(slope)
++     newdata <- rotate(theta, x, y)
++     mean(newdata$y^2)
++ }
+> ofit <- optimize(ofun, lower=.1, upper=3)
+> aeq(dfit3$coef[2], ofit$minimum, tol=1e-5)
+[1] TRUE
+> 
 > proc.time()
    user  system elapsed 
-  0.180   0.016   0.192 
+  0.146   0.019   0.159 
